add: Hive translation and more

--- a/pme_origins_l_korean.yml
+++ b/pme_origins_l_korean.yml
@@ -1,10 +1,10 @@
 ﻿l_korean:
 
 ###########
-# 기원 #
+# Origins #
 ###########
 
 origin_pme_late_ftl:0 "늦은 도착"
-origin_pme_late_ftl_desc:0 "당신의 종족은 평균 문명보다 훨씬 오랫동안 고향 표면을 개선하는 데 집중해 왔습니다. 이로 인해 별을 향해 첫 발을 내딛는 다른 종족보다 고향 행성의 인구가 늘어나고 기반 시설이 훨씬 더 잘 발달되었습니다. "
+origin_pme_late_ftl_desc:0 "당신의 종족은 평균적인 문명보다 훨씬 더 오랫동안 모행성의 표면을 개선하는 데 집중해왔습니다. 이로 인해 당신의 모행성은 대부분의 초보 성간 국가들보다 훨씬 더 높은 인구와 더 잘 발달된 인프라를 갖게 되었습니다. \n \n 불행히도, 두 개의 행성 거대 구조물 건설 중 큰 사고가 발생하여 둘 다 파괴되었고, 잔해가 제거될 때까지 넓은 영역을 사용할 수 없게 되었습니다."
 
-origin_tooltip_pme_late_ftl_effects:0 "- 훨씬 더 많은 인구로 시작하세요. \n-§Y 모성 효과§! \n - 당신의 고향에 이미 건설된 두 개의 강력한 행성 거대 공학 프로젝트와 연구된 행성 공학 기술의 첫 번째 단계로 시작하세요. \n-§R 밸런스가 맞지 않습니다.§!"
+origin_tooltip_pme_late_ftl_effects:0 "-§Y모행성 효과§! \n \n -훨씬 더 높은 인구와 그 인구를 지원할 수 있는 인프라를 갖춘 큰 세계에서 시작합니다. \n \n -모행성에 이미 건설된 세 개의 강력한 행성 메가 엔지니어링 프로젝트와 연구된 행성 공학 기술의 첫 번째 티어로 시작합니다. \n \n 제거하는 데 매우 비용이 많이 드는 두 개의 차단자가 있는 모행성에서 시작합니다. \n \n -§R거주 가능한 보장된 세계가 없습니다.§! \n \n -§R분명히 균형잡히지 않았습니다.§!"
